// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    type="text"
  />
</span>
`;

exports[`TextInput renders block 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-block={true}
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    type="text"
  />
</span>
`;

exports[`TextInput renders contrast 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-contrast={true}
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    type="text"
  />
</span>
`;

exports[`TextInput renders error 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-validation="error"
  onClick={[Function]}
>
  <input
    aria-invalid="true"
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    type="text"
  />
</span>
`;

exports[`TextInput renders large 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-size="large"
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    type="text"
  />
</span>
`;

exports[`TextInput renders leadingVisual 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-leading-visual={true}
  onClick={[Function]}
>
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r15:"
  >
    <svg
      aria-hidden="true"
      className="octicon octicon-search"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height={16}
      overflow="visible"
      style={
        {
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
      />
    </svg>
  </span>
  <input
    aria-describedby=":r15:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
</span>
`;

exports[`TextInput renders leadingVisual 2`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-leading-visual={true}
  onClick={[Function]}
>
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r19:"
  >
    <svg
      aria-hidden="true"
      className="octicon octicon-search"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height={16}
      overflow="visible"
      style={
        {
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
      />
    </svg>
  </span>
  <input
    aria-describedby=":r19:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
</span>
`;

exports[`TextInput renders leadingVisual 3`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-leading-visual={true}
  onClick={[Function]}
>
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r1d:"
  >
    <div>
      Trailing
    </div>
  </span>
  <input
    aria-describedby=":r1d:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
</span>
`;

exports[`TextInput renders leadingVisual 4`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-leading-visual={true}
  onClick={[Function]}
>
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r1h:"
  >
    <div>
      Trailing
    </div>
  </span>
  <input
    aria-describedby=":r1h:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
</span>
`;

exports[`TextInput renders monospace 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-monospace={true}
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    type="text"
  />
</span>
`;

exports[`TextInput renders placeholder 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="560076"
    type="text"
  />
</span>
`;

exports[`TextInput renders small 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-size="small"
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="zipcode"
    onBlur={[Function]}
    onFocus={[Function]}
    type="text"
  />
</span>
`;

exports[`TextInput renders trailingAction icon button 1`] = `
.c0 {
  display: none;
}

.c0[popover] {
  position: absolute;
  padding: 0.5em 0.75em;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: auto;
  -webkit-clip: auto;
  clip: auto;
  white-space: normal;
  font: normal normal 11px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
  -webkit-font-smoothing: subpixel-antialiased;
  color: var(--tooltip-fgColor,var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff)));
  text-align: center;
  word-wrap: break-word;
  background: var(--tooltip-bgColor,var(--bgColor-emphasis,var(--color-neutral-emphasis-plus,#24292f)));
  border-radius: 6px;
  border: 0;
  opacity: 0;
  max-width: 250px;
  inset: auto;
  overflow: visible;
}

.c0[popover]:popover-open {
  display: block;
}

.c0[popover].\\:popover-open {
  display: block;
}

.c0::after {
  position: absolute;
  display: block;
  right: 0;
  left: 0;
  height: var(--overlay-offset,0.25rem);
  content: '';
}

.c0[data-direction='n']::after,
.c0[data-direction='ne']::after,
.c0[data-direction='nw']::after {
  top: 100%;
}

.c0[data-direction='s']::after,
.c0[data-direction='se']::after,
.c0[data-direction='sw']::after {
  bottom: 100%;
}

.c0[data-direction='w']::after {
  position: absolute;
  display: block;
  height: 100%;
  width: 8px;
  content: '';
  bottom: 0;
  left: 100%;
}

.c0[data-direction='e']::after {
  position: absolute;
  display: block;
  height: 100%;
  width: 8px;
  content: '';
  bottom: 0;
  right: 100%;
  margin-left: -8px;
}

.c0:popover-open,
.c0:popover-open::before {
  -webkit-animation-name: tooltip-appear;
  animation-name: tooltip-appear;
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in;
  animation-timing-function: ease-in;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.c0.\\:popover-open,
.c0.\\:popover-open::before {
  -webkit-animation-name: tooltip-appear;
  animation-name: tooltip-appear;
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in;
  animation-timing-function: ease-in;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

@media (forced-colors:active) {
  .c0 {
    outline: 1px solid transparent;
  }
}

<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-trailing-action={true}
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
  <span
    className="TextInput-action TextInputAction"
  >
    <button
      aria-describedby=":r2k:-loading-announcement"
      aria-labelledby=":r2j:"
      className="ButtonBase Invisible IconButton"
      data-block={null}
      data-component="IconButton"
      data-loading={false}
      data-no-visuals={true}
      data-size="small"
      data-variant="invisible"
      onBlur={[Function]}
      onClick={[MockFunction]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOverCapture={[Function]}
      onTouchEnd={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="octicon octicon-search"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height={16}
        overflow="visible"
        style={
          {
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
        />
      </svg>
    </button>
    <span
      aria-hidden={true}
      className="c0"
      data-direction="s"
      id=":r2j:"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Icon label
    </span>
  </span>
</span>
`;

exports[`TextInput renders trailingAction text button 1`] = `
.c0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-trailing-action={true}
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
  <span
    className="TextInput-action TextInputAction"
  >
    <button
      aria-describedby=":r28:-loading-announcement"
      className="ButtonBase Invisible"
      data-block={null}
      data-loading={false}
      data-no-visuals={true}
      data-size="medium"
      data-variant="invisible"
      onClick={[MockFunction]}
      style={{}}
      type="button"
    >
      <span
        className="c0 ButtonContent"
        data-component="buttonContent"
      >
        <span
          className="Label"
          data-component="text"
        >
          Clear
        </span>
      </span>
    </button>
  </span>
</span>
`;

exports[`TextInput renders trailingAction text button with a tooltip 1`] = `
.c0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  display: none;
}

.c1[popover] {
  position: absolute;
  padding: 0.5em 0.75em;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: auto;
  -webkit-clip: auto;
  clip: auto;
  white-space: normal;
  font: normal normal 11px/1.5 -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
  -webkit-font-smoothing: subpixel-antialiased;
  color: var(--tooltip-fgColor,var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff)));
  text-align: center;
  word-wrap: break-word;
  background: var(--tooltip-bgColor,var(--bgColor-emphasis,var(--color-neutral-emphasis-plus,#24292f)));
  border-radius: 6px;
  border: 0;
  opacity: 0;
  max-width: 250px;
  inset: auto;
  overflow: visible;
}

.c1[popover]:popover-open {
  display: block;
}

.c1[popover].\\:popover-open {
  display: block;
}

.c1::after {
  position: absolute;
  display: block;
  right: 0;
  left: 0;
  height: var(--overlay-offset,0.25rem);
  content: '';
}

.c1[data-direction='n']::after,
.c1[data-direction='ne']::after,
.c1[data-direction='nw']::after {
  top: 100%;
}

.c1[data-direction='s']::after,
.c1[data-direction='se']::after,
.c1[data-direction='sw']::after {
  bottom: 100%;
}

.c1[data-direction='w']::after {
  position: absolute;
  display: block;
  height: 100%;
  width: 8px;
  content: '';
  bottom: 0;
  left: 100%;
}

.c1[data-direction='e']::after {
  position: absolute;
  display: block;
  height: 100%;
  width: 8px;
  content: '';
  bottom: 0;
  right: 100%;
  margin-left: -8px;
}

.c1:popover-open,
.c1:popover-open::before {
  -webkit-animation-name: tooltip-appear;
  animation-name: tooltip-appear;
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in;
  animation-timing-function: ease-in;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.c1.\\:popover-open,
.c1.\\:popover-open::before {
  -webkit-animation-name: tooltip-appear;
  animation-name: tooltip-appear;
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in;
  animation-timing-function: ease-in;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

@media (forced-colors:active) {
  .c1 {
    outline: 1px solid transparent;
  }
}

<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-trailing-action={true}
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
  <span
    className="TextInput-action TextInputAction"
  >
    <button
      aria-describedby=":r2e:-loading-announcement :r2d:"
      className="ButtonBase Invisible"
      data-block={null}
      data-loading={false}
      data-no-visuals={true}
      data-size="medium"
      data-variant="invisible"
      onBlur={[Function]}
      onClick={[MockFunction]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOverCapture={[Function]}
      onTouchEnd={[Function]}
      style={{}}
      type="button"
    >
      <span
        className="c0 ButtonContent"
        data-component="buttonContent"
      >
        <span
          className="Label"
          data-component="text"
        >
          Clear
        </span>
      </span>
    </button>
    <span
      aria-hidden={true}
      className="c1 ConditionalTooltip"
      data-direction="s"
      id=":r2d:"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="tooltip"
    >
      Clear input
    </span>
  </span>
</span>
`;

exports[`TextInput renders trailingVisual 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-trailing-visual={true}
  onClick={[Function]}
>
  <input
    aria-describedby=":r1m:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r1m:"
  >
    <svg
      aria-hidden="true"
      className="octicon octicon-search"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height={16}
      overflow="visible"
      style={
        {
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
      />
    </svg>
  </span>
</span>
`;

exports[`TextInput renders trailingVisual 2`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-trailing-visual={true}
  onClick={[Function]}
>
  <input
    aria-describedby=":r1q:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r1q:"
  >
    <svg
      aria-hidden="true"
      className="octicon octicon-search"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height={16}
      overflow="visible"
      style={
        {
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
      />
    </svg>
  </span>
</span>
`;

exports[`TextInput renders trailingVisual 3`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-trailing-visual={true}
  onClick={[Function]}
>
  <input
    aria-describedby=":r1u:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r1u:"
  >
    <div>
      Trailing
    </div>
  </span>
</span>
`;

exports[`TextInput renders trailingVisual 4`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  data-trailing-visual={true}
  onClick={[Function]}
>
  <input
    aria-describedby=":r22:"
    className="Input"
    data-component="input"
    name="search"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    type="text"
  />
  <span
    aria-hidden="true"
    className="TextInput-icon"
    id=":r22:"
  >
    <div>
      Trailing
    </div>
  </span>
</span>
`;

exports[`TextInput renders with a loading indicator 1`] = `
[
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <input
      aria-describedby=":r2o:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r2o:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r2n:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r2q:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r2s:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r2s:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r2r:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <input
      aria-describedby=":r31:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r31:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r30:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r33:"
      >
        <div
          className="SpinnerHidden"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible Spinner SpinnerLeading SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r33: :r35:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r35:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r34:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r38:"
      >
        <div
          className="SpinnerHidden"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible Spinner SpinnerLeading SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r38: :r3a:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r3a:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r39:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r3d:"
      >
        <div
          className="SpinnerVisible"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden Spinner SpinnerLeading SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r3d: :r3f:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r3f:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r3e:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <input
      aria-describedby=":r3j: :r3k:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r3k:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r3j:"
      >
        <div
          className="SpinnerHidden"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible Spinner SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r3m:"
      >
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible SpinnerAnimation"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r3n: :r3o:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r3o:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r3n:"
      >
        <div
          className="SpinnerVisible"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden Spinner SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <input
      aria-describedby=":r3s: :r3t:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r3t:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r3s:"
      >
        <div
          className="SpinnerHidden"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible Spinner SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    data-size="small"
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r3v:"
      >
        <div
          className="SpinnerHidden"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible Spinner SpinnerLeading SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r3v: :r40: :r41:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r41:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r40:"
      >
        <div
          className="SpinnerVisible"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden Spinner SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r44:"
      >
        <div
          className="SpinnerHidden"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible Spinner SpinnerLeading SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r44: :r45: :r46:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r46:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r45:"
      >
        <div
          className="SpinnerVisible"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden Spinner SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
  .c0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

<span
    aria-busy={true}
    className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
    data-leading-visual={true}
    data-size="large"
    data-trailing-visual={true}
    onClick={[Function]}
  >
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r49:"
      >
        <div
          className="SpinnerVisible"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerHidden Spinner SpinnerLeading SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
    <input
      aria-describedby=":r49: :r4a: :r4b:"
      className="Input"
      data-component="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <span
      className="c0"
      id=":r4b:"
    >
      Loading
    </span>
    <span
      className="TextInput-icon"
    >
      <div
        className="Box"
        id=":r4a:"
      >
        <div
          className="SpinnerHidden"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-search"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height={16}
            overflow="visible"
            style={
              {
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"
            />
          </svg>
        </div>
        <span
          className="Box"
        >
          <svg
            aria-hidden={true}
            className="SpinnerVisible Spinner SpinnerAnimation"
            fill="none"
            height="32px"
            viewBox="0 0 16 16"
            width="32px"
          >
            <circle
              cx="8"
              cy="8"
              r="7"
              stroke="currentColor"
              strokeOpacity="0.25"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
            <path
              d="M15 8a7.002 7.002 0 00-7-7"
              stroke="currentColor"
              strokeLinecap="round"
              strokeWidth="2"
              vectorEffect="non-scaling-stroke"
            />
          </svg>
        </span>
      </div>
    </span>
  </span>,
]
`;

exports[`TextInput should render a password input 1`] = `
<span
  aria-busy={false}
  className="TextInput-wrapper TextInputWrapper TextInputBaseWrapper"
  onClick={[Function]}
>
  <input
    className="Input"
    data-component="input"
    name="password"
    onBlur={[Function]}
    onFocus={[Function]}
    type="password"
  />
</span>
`;
